Added multi language support for Danish and English.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BePeaked Project</string>
+    <string name="app_name">BePeaked Projekt</string>
 
     <string name="login_banner">Login Menu</string>
     <string name="login_createUser"><u>Create User</u></string>
