masse små ændringer

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1,6 +1,8 @@
 <resources>
+    <!--Projekt navn-->
     <string name="app_name">BePeaked Projekt</string>
 
+    <!--Log ind menu-->
     <string name="login_banner">Login Menu</string>
     <string name="login_createUser"><u>Opret Bruger</u></string>
     <string name="login_username">Brugernavn</string>
@@ -8,6 +10,7 @@
     <string name="login_password">Kodeord</string>
     <string name="login_buttonExecute">Log på</string>
 
+    <!--Main menu-->
     <string name="mainMenu_banner">Menu</string>
     <string name="mainMenu_buttonWorkoutMenu">Træningsprogrammer</string>
     <string name="mainMenu_buttonExerciseLibrary">Øvelser</string>
@@ -15,12 +18,14 @@
     <string name="toolbar_elAbout">Om</string>
     <string name="toolbar_elLogOut">Log Af</string>
 
+    <!--Workout-->
     <string name="workoutMenu_banner">Træningsprogrammer</string>
     <string name="createWorkout_title">Opret Træningsprogram</string>
     <string name="createWorkout_description">Angiv programmets navn:</string>
     <string name="createWorkout_nameInput">Indtast navn her..</string>
     <string name="createWorkout_buttonExecute">Opret træningsprogram</string>
 
+    <!--Øvelse-->
     <string name="exerciseResult_banner">Resultater</string>
     <string name="exerciseResult_tableWeight">Vægt</string>
     <string name="exerciseResult_tableReps">Reps</string>
@@ -29,11 +34,10 @@
     <string name="exerciseResult_addBanner">Tilføj resultat</string>
     <string name="exerciseResult_addDescription">Angiv dit resultat for dette sæt</string>
     <string name="exerciseResult_addButtonExecute">Gem</string>
-
     <string name="exerciseDescription_banner">Beskrivelse</string>
-
     <string name="exerciseMenu_banner">Øvleser</string>
 
+    <!--Kostplan-->
     <string name="dietPlanMenu_banner">Opskrifter</string>
     <string name="dietPlanMenu_breakfast">Morgenmad</string>
     <string name="dietPlanMenu_lunch">Frokost</string>
