--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="login_banner">Login Menu</string>
     <string name="login_createUser"><u>Create User</u></string>
     <string name="login_username">Username</string>
-    <string name="login_usernameInput">Enter username here..</string>
+    <string name="login_usernameInput">Enter username here...</string>
     <string name="login_password">Password</string>
     <string name="login_buttonExecute">Log in</string>
 
@@ -36,8 +36,10 @@
     <string name="exerciseResult_addButtonExecute">Save</string>
     <string name="exerciseDescription_banner">Description</string>
     <string name="exerciseMenu_banner">Exercises</string>
-
-    <string name="Exercise_akt_exercise">exercise</string>
+    <string name="exerciseMenu_search">Search...</string>
+    <string name="exercise_add">Click an exercise below to add</string>
+    <string name="add_exercise">Add Exercise</string>
+    <string name="exercise_cancel">Cancel</string>
 
     <!--Kostplan-->
     <string name="dietPlanMenu_banner">Diet Plan</string>
@@ -46,12 +48,8 @@
     <string name="dietPlanMenu_dinner">Dinner</string>
     <string name="dietPlanMenu_snacks">Snacks</string>
 
-    <string name="DietPlanMenu_description">description</string>
-
-    <string name="Recipe_description">description</string>
-
+    <!--Opskrifter-->
     <string name="DietPlanMenu_Proteinsmoothie_and_egg">Proteinsmoothie and egg</string>
-    <string name="DietPlanMenu_Clicked_on"> Clicked on : </string>
     <string name="DietPlanMenu_shun">Shun</string>
     <string name="DietPlanMenu_Banana_Pancakes">Banana Pancakes</string>
     <string name="DietPlanMenu_Chili_con_carne">Chili con Carne</string>
@@ -60,7 +58,6 @@
     <string name="DietPlanMenu_Student_Caviar">Student Caviar</string>
     <string name="DietPlanMenu_Nuts">Nuts</string>
 
-
     <!--Indstillinger-->
     <string name="settingstitle">Settings</string>
     <string name="settings_profile">Profile</string>
@@ -68,6 +65,16 @@
     <string name="settings_unitsystem">Change Unitsystem</string>
     <string name="settings_about">About</string>
     <string name="settings_logout">Log out</string>
+    <string name="settings_danish">Danish</string>
+    <string name="settings_english">English</string>
+    <string name="settings_vietnamese">Vietnamese</string>
+    <string name="settings_default">Default</string>
 
+    <!--Sprog-->
+    <string name="language_title">Language</string>
+    <string name="language_loading">Changing Language...</string>
+
+    <!--Enheder-->
+    <string name="unitsystem_title">Unitsystem</string>
 
 </resources>
