Lavet about og fikset mere sprog i values strings

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -69,7 +69,7 @@
     <string name="settings_english">Engelsk</string>
     <string name="settings_vietnamese">Vietnamesisk</string>
     <string name="settings_default">Default</string>
-
+    <string name="settings_about_text">Vi er BePeaked, vi stræber efter resultater og at du opnår disse. noget noget noget</string>
 
     <!--Sprog-->
     <string name="language_title">Sprog</string>
@@ -77,6 +77,8 @@
 
     <!--Enheder-->
     <string name="unitsystem_title">Enheder</string>
+
+    <!--Credits-->
     <string name="credits_title">Credits</string>
     <string name="credits_everkinetic">Alle øvelses billeder er lavet af Everkinetic hos everkinetic.com\nBillederne ligger under Creative Commons Attribution-ShareAlike 3.0 Unported Lisens.</string>
     <string name="credits_grp9">Denne app er udviklet i samarbejde med gruppe 9 fra Danmarks tekniske universitet (DTU) i forbindlese med kursus 62550 Brugerinteraktion og udvikling på mobile enheder E16 under vejledning af Ian Bridgwood og Jacob Nordfalk.\nTak til gruppemedlemerne;\nMartin Rødgaard\nMathias Kvisgaard Hansen\nFrank Thomsen aka. Don Fronk Franko Fonko\nMagnus Erengaard Enevoldsen\nLasse Holm Nielsen</string>
