Gjort klar til at kunne redigere i listers layout

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -86,4 +86,9 @@
     <string name="credits_everkinetic">Alle øvelses billeder er lavet af Everkinetic hos everkinetic.com\nBillederne ligger under Creative Commons Attribution-ShareAlike 3.0 Unported Lisens.</string>
     <string name="credits_grp9">Denne app er udviklet i samarbejde med gruppe 9 fra Danmarks tekniske universitet (DTU) i forbindlese med kursus 62550 Brugerinteraktion og udvikling på mobile enheder E16 under vejledning af Ian Bridgwood og Jacob Nordfalk.\nTak til gruppemedlemerne;\nMartin Rødgaard\nMathias Kvisgaard Hansen\nFrank Thomsen aka. Don Fronk Franko Fonko\nMagnus Erengaard Enevoldsen\nLasse Holm Nielsen</string>
 
+    <!--Toolbar-->
+    <string name="toolbar_edit">Ret</string>
+    <string name="toolbar_add">Tilføj</string>
+    <string name="toolbar_settings">Indstillinger</string>
+
 </resources>
