--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -73,6 +73,8 @@
     <string name="settings_vietnamese">Vietnamesisk</string>
     <string name="settings_default">Default</string>
     <string name="settings_about_text">Vi er BePeaked, vi stræber efter resultater og at du opnår disse. noget noget noget</string>
+    <string name="settings_activationkey" >Skriv din aktiveringsnøgle her for at be peaked</string>
+    <string name="settings_buttonActivation" >Aktiver</string>
 
     <!--Sprog-->
     <string name="language_title">Sprog</string>
