--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="settings_vietnamese">Vietnamese</string>
     <string name="settings_default">Default</string>
     <string name="settings_about_text">We are BePeaked, we strive to get results, and for you to get results. something something something</string>
+    <string name="settings_activationkey" >Insert your activation key here to be peaked</string>
+    <string name="settings_buttonActivation" >Activate</string>
 
     <!--Sprog-->
     <string name="language_title">Language</string>
