--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -60,6 +60,8 @@
     <string name="DietPlanMenu_Omelette">Omelet</string>
     <string name="DietPlanMenu_Student_Caviar">Student Caviar</string>
     <string name="DietPlanMenu_Nuts">Nødder</string>
+    <string name="recipe_ingridients">Ingredienser: </string>
+
 
     <!--Indstillinger-->
     <string name="settingstitle">Indstillinger</string>
