--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -108,15 +108,17 @@
     <string name="toolbar_settings">Indstillinger</string>
 
     <!--Opret bruger-->
-    <string name="create_user_user">Brugernavn</string>
+    <string name="create_user_user">Fornavn</string>
     <string name="create_user_email">E-mail</string>
     <string name="create_user_password">Password</string>
     <string name="create_user_password_gentag">Gentag password</string>
-    <string name="create_user_edit_user">Indtast brugernavn...</string>
+    <string name="create_user_edit_user">Indtast fornavn...</string>
     <string name="create_user_email_edit">Indtast Email...</string>
     <string name="create_user_password_edit">Indtast Password...</string>
     <string name="create_user_password_gentag_edit">Gentag Password...</string>
     <string name="create_user_btn">Opret bruger</string>
     <string name="create_user_title">Opret Bruger</string>
+    <string name="create_user_last_name">Efternavn</string>
+    <string name="create_user_last_name_edit">Indtast efternavn...</string>
 
 </resources>
