--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,8 @@
 
     <!--Øvelse-->
     <string name="exerciseResult_banner">Results</string>
-    <string name="exerciseResult_tableWeight">Weight</string>
+    <string name="exerciseResult_tableWeightkg">Kilogram</string>
+    <string name="exerciseResult_tableWeightgr">Gram</string>
     <string name="exerciseResult_tableReps">Reps</string>
     <string name="exerciseResult_table1RM">1-RM</string>
     <string name="exerciseResult_tableButtonEdit">Edit</string>
@@ -108,16 +109,18 @@
     <string name="toolbar_settings">Settings</string>
 
     <!--Opret Bruger-->
-    <string name="create_user_user">Username</string>
+    <string name="create_user_user">First name</string>
     <string name="create_user_email">E-mail</string>
     <string name="create_user_password">Password</string>
     <string name="create_user_password_gentag">Repeat password</string>
-    <string name="create_user_edit_user">Type in username...</string>
+    <string name="create_user_edit_user">Type in First name...</string>
     <string name="create_user_email_edit">Type in Email...</string>
     <string name="create_user_password_edit">Type in Password...</string>
     <string name="create_user_password_gentag_edit">Repeat Password...</string>
     <string name="create_user_btn">Create User</string>
     <string name="create_user_title">Create User</string>
+    <string name="create_user_last_name">Last name</string>
+    <string name="create_user_last_name_edit">Type in Last name...</string>
 
 
 </resources>
