--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="mainMenu_buttonWorkoutMenu">Workouts</string>
     <string name="mainMenu_buttonExerciseLibrary">Exercises</string>
     <string name="mainMenu_buttonDietPlan">Diet Plan</string>
+    <string name="main_menu_kunde">You have to be costumer, to use this activity</string>
     <string name="toolbar_elAbout">About</string>
     <string name="toolbar_elLogOut">Log Out</string>
 
