--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -28,6 +28,8 @@
 
     <!--Øvelse-->
     <string name="exerciseResult_banner">Resultater</string>
+    <string name="exerciseResult_tableWeightkg">Kilogram</string>
+    <string name="exerciseResult_tableWeightgr">Gram</string>
     <string name="exerciseResult_tableWeight">Vægt</string>
     <string name="exerciseResult_tableReps">Reps</string>
     <string name="exerciseResult_table1RM">1-RM</string>
@@ -93,6 +95,8 @@
     <string name="settings_user_protein">Protein: </string>
     <string name="settings_user_fat">Fedt: </string>
     <string name="settings_changepassword">Skift kodeord</string>
+    <string name="settings_changeEmail">Skift email</string>
+    <string name="settings_changeUsername">Skift brugernavn</string>
 
     <!--Sprog-->
     <string name="language_title">Sprog</string>
