--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,8 @@
     <string name="settings_user_protein">Protein: </string>
     <string name="settings_user_fat">Fat: </string>
     <string name="settings_changepassword">Change password</string>
+    <string name="settings_changeEmail">Change email</string>
+    <string name="settings_changeUsername">Change username</string>
 
     <!--Sprog-->
     <string name="language_title">Language</string>
@@ -130,5 +132,6 @@
     <string name="create_user_created">User created</string>
     <string name="create_user_error_password">Your passwords doesn\'t match</string>
     <string name="recipe_text">Proteinpowder: 38 g\nOat meal: 94 g\nFrozen berries: 151 g\nEgg: 94 g\nTotal: 377 g</string>
+
 
 </resources>
