--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="exercise_cancel">Cancel</string>
     <string name="Exercises_sets">"Sets: "</string>
     <string name="Exercises_reps">"Reps: "</string>
+    <string name="exerciseResult_tableWeight">Weight</string>
+
 
     <!--Kostplan-->
     <string name="dietPlanMenu_banner">Diet Plan</string>
@@ -66,7 +68,9 @@
     <string name="DietPlanMenu_Student_Caviar">Student Caviar</string>
     <string name="DietPlanMenu_Nuts">Nuts</string>
     <string name="recipe_ingridients">Ingredients: </string>
-
+    <string name="recipe_text">Proteinpowder: 38 g\nOat meal: 94 g\nFrozen berries: 151 g\nEgg: 94 g\nTotal: 377 g</string>
+    <string name="recipe_protiensmoothie">1. Bland skyr, isterninger, havregryn, blåbær og proteinpulver i den beskrevne mængde og blend det i 2-3 minutter.\n \n2. Ægget kan du spise hårdkogt eller som spejlæg. Spejlæg: Slå æggene ud på en opvarmet pande og lad dem stege 3-5 minutter, afhængig af hvordan blommen foretrækkes. Hold blusset på middel varme.</string>
+    <string name="recipe_opskrift_title">Recipe:</string>
 
     <!--Indstillinger-->
     <string name="settingstitle">Settings</string>
@@ -131,9 +135,7 @@
     <string name="create_user_username_edit">Type in Username...</string>
     <string name="create_user_created">User created</string>
     <string name="create_user_error_password">Your passwords doesn\'t match</string>
-    <string name="recipe_text">Proteinpowder: 38 g\nOat meal: 94 g\nFrozen berries: 151 g\nEgg: 94 g\nTotal: 377 g</string>
-    <string name="exerciseResult_tableWeight">Weight</string>
-    <string name="recipe_protiensmoothie">1. Bland skyr, isterninger, havregryn, blåbær og proteinpulver i den beskrevne mængde og blend det i 2-3 minutter.\n \n2. Ægget kan du spise hårdkogt eller som spejlæg. Spejlæg: Slå æggene ud på en opvarmet pande og lad dem stege 3-5 minutter, afhængig af hvordan blommen foretrækkes. Hold blusset på middel varme.</string>
+
 
 
 </resources>
