fjernet this og næsten done med validering

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -137,7 +137,7 @@
     <string name="create_user_username">Brugernavn</string>
     <string name="create_user_username_edit">Indtast brugernavn...</string>
     <string name="create_user_created">Bruger oprettet</string>
-    <string name="create_user_error_password">Dine password stemmer ikke overens</string>
+    <string name="create_user_error">Du skal udfylde hvert felt, eller også stemmer dine koder ikke overens</string>
 
 
 </resources>
