--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="createWorkout_buttonExecute">Save Workout</string>
     <string name="createWorkout_name">Remember to give your workout a name</string>
 
+
     <!--Øvelse-->
     <string name="exerciseResult_banner">Results</string>
     <string name="exerciseResult_tableWeightkg">Kilogram</string>
@@ -46,6 +47,7 @@
     <string name="Exercises_sets">"Sets: "</string>
     <string name="Exercises_reps">"Reps: "</string>
     <string name="exerciseResult_tableWeight">Weight</string>
+    <string name="exerciseResult_editBanner">Edit exercise result</string>
 
 
     <!--Kostplan-->
@@ -140,6 +142,5 @@
     <string name="create_user_username_edit">Type in Username...</string>
     <string name="create_user_created">User created</string>
     <string name="create_user_error">You need to fill in the blanks, or maybe your passwords doesn\'t match</string>
-
 
 </resources>
