--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -139,7 +139,7 @@
     <string name="create_user_username">Username</string>
     <string name="create_user_username_edit">Type in Username...</string>
     <string name="create_user_created">User created</string>
-    <string name="create_user_error">You need to fill in the blanks, or maybe your passwords doesn\'t match</string>
+    <string name="create_user_error">You need to fill in the blanks, or maybe your passwords doesn\'t match. Remember to have at least 6 characters in you password</string>
     <string name="exerciseResult_editBanner">Edit exercise result</string>
 
 </resources>
